# PubMedPortable

./: Dockerfile.base  docker-compose.yml  license.txt  pyproject.toml
src/: PubMedDB.py  PubMedParser.py  python_pre_start.py  start.sh
src/BioC_export/: BioC_to_CSV.py  add_BioC_annotation.py  get_search_term_identifiers.py  read_BioC_annotations.py  results_PubTator_format.py  unify.py
src/PMC/: generate_xapian_compact_command.py  index.py  insert_PMC_ID_Name_PubMed_ID_mapping.py  insert_PMC_ID_PubMed_ID_mapping.py  search.py
src/PyLucene/: index.py  search.py
src/alembic/: env.py
src/db/: PubMedDB.py  base.py  session.py
src/full_text_index/: RunXapian.py  find_authors.py  search_near_title.py  search_not_title_or_text.py  search_title.py  search_title_or_text.py  summary.py
src/plots/bar_chart/: get_years.py  merge.py
src/plots/pie_chart/: pie_chart_countries.py
src/plots/word_cloud/: generate_surrounding_words_log.py
