[tool.poetry]
name = "pubmedportable"
version = "0.1.0"
description = ""
authors = ["Anton Melser <anton@melser.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.36"
xappy = "^0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
