[tool.poetry]
name = "pubmedportable"
version = "0.1.0"
description = ""
authors = ["Anton Melser <anton@melser.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = {extras = ["asyncio", "mypy"], version = "^1.4.36"}
pydantic = "^1.9.1"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
